--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,8 +1,6 @@
 <h2><%= @artist.name %></h2><hr>
 
-# Need to put the image here!!
-
-<p>Gender: <%= @artist.gender %></p>
+<p>Gender: <%= @artist.gender.capitalize %></p>
 <p>Date of Birth: <%= @artist.birth_day %></p>
 <p>Date of Death: <%= @artist.death_day %></p>
 <p>Hometown: <%= @artist.hometown %></p>
@@ -10,10 +8,6 @@
 <p>Nationality: <%= @artist.nationality %></p>
 <h4>Biography</h4>
 <p><%= @artist.biography %></p>
-
-<h4>Artworks</h4>
-# Need to check this!
-<p><%= link_to @artist.artwork.name, @artist.artwork %></p><hr>
 
 
 <%= link_to 'All Artists', artists_path %><hr>
